# Imagemagick-

./: CMakeLists.txt  README.md  main.cpp
